--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ h1 {
     position: relative;
     text-align: center;
     font-family: 'Varela Round';
-    font-size: 48px;
+    font-size: 100px;
     margin-top: 2%;
     margin-bottom: 4%;
 }
@@ -29,17 +29,17 @@ ul {
 
 li {
     display: inline;
-    width: 33%;
     text-align: center;
 }
 
 li a {
-    color: grey;
+    color: purple;
     text-decoration: none;
 }
 
 li a:hover {
     color: #33cccc;
+    transform: scale(1.5);
 }
 
 .navBar {
