--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ h1 {
     position: relative;
     text-align: center;
     font-family: 'Varela Round';
-    font-size: 100px;
+    font-size: 48px;
     margin-top: 2%;
     margin-bottom: 4%;
 }
@@ -33,13 +33,13 @@ li {
 }
 
 li a {
-    color: purple;
+    color: grey;
     text-decoration: none;
 }
 
 li a:hover {
     color: #33cccc;
-    transform: scale(1.5);
+    font-size: 30px;
 }
 
 .navBar {
