--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@
 
 html, body { height: 100%; width: 100%; margin: 0; }
 
+/* CSS for index.html */
 h1 {
     position: relative;
     text-align: center;
@@ -29,7 +30,7 @@ ul {
 li {
     display: inline;
     text-align: center;
-    width: 20%;
+    width: 16.67%;
 }
 
 li a {
@@ -62,7 +63,7 @@ p {
 
 img#main {
     border-radius: 50px;
-    margin-left: 5%;
+    margin-left: 10%;
 }
 
 
@@ -80,6 +81,8 @@ h3 {
     font-weight: bolder;
 }
 
+
+/* CSS for aboutme.html */
 .aboutMeLine{
     flex-direction: row;
     display: flex;
@@ -201,4 +204,60 @@ a:hover{
 
 p{
     padding: 5px;
+}
+
+/* CSS for recipes.html */
+.row {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+  
+.column {
+    position: relative;
+    flex: 25%;
+    max-width: 33%;
+    padding: 0 4px;
+}
+
+.column img{
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+}
+  
+.hover {
+    position: absolute;
+    z-index: 999;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 40%; 
+    text-align: center;
+    width: 80%; 
+    transition: .5s ease;
+    opacity: 0;
+}
+
+.overlay-image:hover .hover {
+    opacity: 1;
+}
+
+
+span{
+    color: white; 
+    font-family: 'Varela Round';
+    font-size: 60px;
+    background: rgb(0, 0, 0); 
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px; 
+}
+
+span#small{
+    font-size: 40px;
+}
+
+span#medium{
+    font-size: 50px;
 }
